fix: collapse class

--- a/src/app/Collapse/collapse.component.scss
+++ b/src/app/Collapse/collapse.component.scss
@@ -1,4 +1,4 @@
-.dropdown {
+.collapse {
   padding: 10px;
   background-color: cadetblue;
   border-radius: 4px;
